src/objects/BurdenStructure__c.object
<CustomObject>
    <fields>
        <fullName>BurdenStructure_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>BurdenStructure ExternalId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CostBase__c</fullName>
        <label>Cost Base</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCode__c</fullName>
        <label>Cost Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostPlusStructure__c</fullName>
        <label>Cost Plus Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExpenditureType__c</fullName>
        <label>Expenditure Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastUpdateDate__c</fullName>
        <label>Last Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Precedence__c</fullName>
        <label>Precedence</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Burden Structure</label>
    <listViews>
        <fullName>Cost_Plus_Expenditure_Type</fullName>
        <columns>CostBase__c</columns>
        <columns>CostCode__c</columns>
        <columns>BurdenStructure_ExternalId__c</columns>
        <columns>Precedence__c</columns>
        <columns>CostPlusStructure__c</columns>
        <columns>ExpenditureType__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CostPlusStructure__c</field>
            <operation>equals</operation>
            <value>ANZAME COST-STANDARD V2</value>
        </filters>
        <filters>
            <field>ExpenditureType__c</field>
            <operation>equals</operation>
            <value>LAB - Global Labour 06</value>
        </filters>
        <label>Cost Plus + Expenditure Type</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BStruct-{00000000}</displayFormat>
        <label>Burden Structure Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Burden Structure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>